--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <img src="./assets/githublogo.png" alt="GitHub Logo" />
       </div>
       <div class="cards"></div>
+      <!-- <div class="calender"></div> -->
     </div>
     <!-- TODO: add CDN library here -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
